--- a/manifest.json
+++ b/manifest.json
@@ -22,37 +22,17 @@
   },
   "homepage_url": "https://github.com/createcandle/candlecam",
   "id": "candlecam",
-  "license": "MPL-2.0",
+  "license": "None",
   "manifest_version": 1,
   "name": "Candle cam",
   "options": {
     "default": {
-	  "Use microphone": false,
-      "Contain": true,
-	  "Clock": true,
-	  "Use ramdrive": true,
       "Debug": false
     },
     "schema": {
       "properties": {
-        "Use microphone": {
-          "description": "Should audio also be recorded and transmitted? This is not compatible with Voco, since the microphone currently cannot be shared.",
-          "type": "boolean"
-        },
-        "Contain": {
-          "description": "If enabled, pictures will be shown in full, with black bars around them. If disabled, they will fit the screen fully, but parts may be cut-off.",
-          "type": "boolean"
-        },
-        "Clock": {
-          "description": "Show the time on top of the photos.",
-          "type": "boolean"
-        },
-        "Use ramdrive": {
-          "description": "Might improve the longevity of your SD card, at the cost of memory/performance.",
-          "type": "boolean"
-        },
         "Debug": {
-          "description": "Enable this to see much more detail in the internal WebThings Gateway log about what this add-on is doing.",
+          "description": "Enable this to see much more detail in the internal log about what this add-on is doing.",
           "type": "boolean"
         }
       },
@@ -64,14 +44,14 @@
   "web_accessible_resources": [
     "css/*.css",
     "images/*.svg",
-	"photos/*.gif",
-	"photos/*.jpg",
-	"photos/*.jpeg",
+    "photos/*.gif",
+    "photos/*.jpg",
+    "photos/*.jpeg",
     "stream/*.mpd",
     "stream/*.m4s",
     "stream/*.m3u8",
-	"stream/*.mjpg",
-	"stream/*.mjpeg",
+    "stream/*.mjpg",
+    "stream/*.mjpeg",
     "js/*.js",
     "views/*.html"
   ]
