--- a/manifest.json
+++ b/manifest.json
@@ -30,9 +30,9 @@
 	  "Portrait mode": false,
 	  "High resolution": false,
       "Data retention days": 2,
-	  "Send snapshots to Matrix messenger": true,
+	  "Disable sending snapshots to Matrix messenger": false,
 	  "Send snapshots to printer": false,
-      "Debug": false
+      "Debugging": false
     },
     "schema": {
       "properties": {
@@ -59,15 +59,15 @@
           ],
           "type": "string"
         },
-        "Send snapshots to Matrix messenger": {
-          "description": "If you are also using the Voco addon and have created a Matrix messenger account with it, then you can receive snapshots from the camera on your mobile devices. If you are using Candle Camera as a smart doorbell, then you could receive a photo whenever someone presses the doorbell.",
+        "Disable sending snapshots to Matrix messenger": {
+          "description": "If you are also using the Voco addon and have created a Matrix messenger account with it, then you can receive snapshots from the camera on your mobile devices. If you are using Candle Camera as a smart doorbell, then you could receive a photo whenever someone presses the doorbell. Normally you can switch this on and off at any time, but you can fully disable the feature if you prefer.",
           "type": "boolean"
         },
         "Send snapshots to printer": {
           "description": "If enabled, and if a (Bluetooth) printer is connected, then newly saved snapshots will also be sent to the printer. Please discuss enabling this feature with people who frequent your home.",
           "type": "boolean"
         },
-        "Debug": {
+        "Debugging": {
           "description": "Enable this to see much more detail in the internal log about what this add-on is doing. Useful during development or figuring out why something is not working.",
           "type": "boolean"
         }
@@ -76,7 +76,7 @@
     }
   },
   "short_name": "candlecam",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "web_accessible_resources": [
     "css/*.css",
     "images/*.svg",
