--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,8 @@
     "default": {
 	  "Portrait mode": false,
 	  "High resolution": false,
-      "Data retention days": 2,
+	  "Motion snapshot threshold": 50,
+      "Data retention days": "2",
 	  "Disable sending snapshots to Matrix messenger": false,
 	  "Send snapshots to printer": false,
       "Debugging": false
@@ -48,6 +49,10 @@
           "description": "Enable this if you have plugged in a ReSpeaker hat. You will need to install such a device if you want to turn your controller into a smart doorbell.",
           "type": "boolean"
         },
+        "Motion snapshot threshold": {
+          "description": "Above which motion level should a snapshot automatically be taken? Set to 100 to disable automatically taking snapshots when motion is detected. The default is 50%.",
+          "type": "boolean"
+        },
         "Data retention days": {
           "description": "For how many days should snapshots be stored? The default is 2 days. Set to 0 to disable taking snapshots.",
           "enum": [
@@ -60,6 +65,17 @@
             "7",
             "10",
             "14"
+          ],
+          "type": "string"
+        },
+        "Camera cover delay": {
+          "description": "If you're using Candle Camera as a polite doorbell, how long should the camera cover stay open after the doorbell is pressed? The default is 1 minute.",
+          "enum": [
+			"6 seconds",
+            "30 seconds",
+            "1 minute",
+            "3 minutes",
+            "5 minutes"
           ],
           "type": "string"
         },
@@ -80,7 +96,7 @@
     }
   },
   "short_name": "candlecam",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "web_accessible_resources": [
     "css/*.css",
     "images/*.svg",
